# NewPizza

./: .dockerignore  .env  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  test.json
backend/: .env  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/backend/: asgi.py  settings.py  urls.py  utils.py
backend/backend/settings/: base.py  dev.py  prod.py
backend/cart/: apps.py  models.py  serializers.py  urls.py  views.py
backend/cart/migrations/: 0001_initial.py  0002_initial.py
backend/fixtures/: promo.json
backend/orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_initial.py
backend/products/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py
backend/templates/emails/: order_info.html  welcome-email.html
backend/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx
frontend/src/api/: DataFetch.jsx
frontend/src/app/: App.jsx  App.tsx  main.jsx  main.tsx
frontend/src/context/: UseCart.jsx
frontend/src/css/: index.css
frontend/src/layouts/: Footer.jsx  Loader.jsx  NavBar.jsx
frontend/src/pages/: index.js
frontend/src/services/: config.jsx
nginx/: nginx.conf
nginx/ssl/: certificate.crt  certificate.key
(+103 files in other folders)
